--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -1,17 +1,17 @@
 
 @font-face {
   font-family: Museo Sans;
-  src: url("/fonts/MuseoSans_500.otf") format("opentype");
+  src: url("../fonts/MuseoSans_500.otf") format("opentype");
 }
 
 @font-face {
   font-family: Museo Sans;
   font-weight: bold;
-  src: url("/fonts/MuseoSans_500.otf") format("opentype");
+  src: url("../fonts/MuseoSans_500.otf") format("opentype");
 }
 
 body {
-  background: #000000 url(/images/bg.jpg);
+  background: #000000 url(../images/bg.jpg);
   background-size: cover;
   color: #fff;
   font-family: Museo Sans, sans-serif;
