--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -100,7 +100,7 @@ input[type=number] {
   position: relative;
   line-height: 10rem;
   text-align: center;
-  width: 12rem;
+  width: 100%;
 }
 
 .separator {
