More subtle animation

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -84,7 +84,7 @@ input[type=number] {
   transform-style: preserve3d;
   perspective: 500px;
   height: 10rem;
-  width: 32rem;
+  width: 26rem;
   margin: 0 auto;
 
   &.remove {
@@ -103,12 +103,8 @@ input[type=number] {
   width: 100%;
 }
 
-.minutes {
-  
-}
-
 .separator {
-  animation: pulse 1s linear infinite;
+  //animation: pulse 1s linear infinite;
   width: 2rem;
 }
 
@@ -128,11 +124,11 @@ input[type=number] {
 }
 
 .new {
-  animation: show-new .2s $bezier-in forwards;
+  animation: show-new .4s $bezier-in forwards;
 }
 
 .old {
-  animation: hide-old .8s $bezier-out forwards;
+  animation: hide-old 2s $bezier-out forwards;
 }
 
 @keyframes hide-countdown {
@@ -157,7 +153,7 @@ input[type=number] {
 @keyframes show-new {
   0% {
     opacity: 0;
-    transform: translate(-50%, -50%) translateY(-1rem) scale(.9) rotateX(-10deg);
+    transform: translate(-50%, -50%) translateY(-2rem) scale(.8) rotateX(-20deg);
   }
   100% {
     transform: translate(-50%, -50%);
@@ -168,11 +164,11 @@ input[type=number] {
   0% {
     transform: translate(-50%, -50%);
   }
-  20% {
-    opacity: 0.2;
+  50% {
+    opacity: 0;
   }
   100% {
     opacity: 0;
-    transform: translate(-50%, -50%) translateY(-2rem) scale(.5) rotateX(-25deg);
+    transform: translate(-50%, -50%) translateY(-5rem) scale(.5) rotateX(-75deg);
   }
 }
